# llm-context-arena

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COUNCIL_OG_README.md  LICENSE  LICENSING.md  NOTICE  PLAN.md  RAG_LMSTUDIO.md  README.md  make_source_bundle.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
agentdocs/plans/: coderag_pro_plan.md
backend/: __init__.py  arena.py  budget.py  budget_metadata.py  catalog_editor.py  catalog_refresh.py  component_budget.py  config.py  context_engine.py  cost_tracking.py  cuda_bootstrap.py  dependencies.py  directives.py  execution_quality.py  execution_trace.py  main.py  metrics.py  model_failures.py  models.py  openrouter.py  prompt_provenance.py  rag_lmstudio.py  rag_lmstudio_provider.py  rag_provider.py  run_hyp001.py  run_hyp002.py  run_turn.py  session_catalog.py  session_projection.py  squad_presets.py  storage.py  storage_service.py  structure_wrap.py  summarizer.py  summarizer_pool.py  turn_service.py  turn_store.py
backend/frozen_config/: __init__.py  catalog.py  loader.py  schemas.py
backend/observations/: __init__.py  service.py  store.py
backend/prompts/: __init__.py  (+1 more)
data/: arena_config.yaml  model_catalog.yaml
docs/: agent-control-plane-architecture.md  curia-handoff.md  dec-018-catalog-config-summarizer.md  decision_log.md  dis-002-mode-turn-routing.md  hyp001_results_learned.json  hyp002_results.json  piv-001-agent-control-plane.md  piv-001-checklist.md  piv-002-observatory-ui.md  piv-003-curia-rebrand.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
mcp_arena/: __init__.py  client.py  env.py  quality.py  server.py
scripts/: arena_cli.py  dogfood_bayence.py
tests/: __init__.py  conftest.py
(+169 files in other folders)
